# agric_hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  crop_analyzer.db  pyproject.toml  requirements.txt
app/: main.py  schemas.py  utils.py
app/api/: endpoints.py
app/chatbot/: local_service.py
app/core/: config.py
app/data/: knowledge_base.json
app/db/: crud.py  database.py  models.py
app/ml/: inference.py
app/models/: db.py  model.py  models.py  schemas.py
app/routes/: chat.py  users.py
app/static/: style.css
app/templates/: index.html  knowledge_base.html
app/utils/: knowledge.py
faiss_index/: index.faiss  index.pkl
finetuning/: api_endpoints.py  data_pipeline.py  lora_trainer.py
knowledge_base/Cashew/: anthracnose.md  gummosis.md  leaf_miner.md  red_rust.md
knowledge_base/Cassava/: bacterial_blight.md  brown_spot.md  green_mite.md  mosaic.md
knowledge_base/Maize/: fall_armyworm.md  grasshopper.md  leaf_beetle.md  leaf_blight.md  leaf_spot.md  streak_virus.md
knowledge_base/Tomato/: leaf_blight.md  leaf_curl.md  septoria_leaf_spot.md  verticillium_wilt.md
model_store/: class_mappings.json
notebooks/: model_training.ipynb
rag/: __init__.py
rag/app/: configs.py  rag_pipe.py
rag/prompt_templates/: main_prompt_template.txt
rag_pipeline/app/: configs.py  data_ingestion.py  rag_pipe.py  toutbot.py
tests/notebooks/: preprocessing.ipynb
utils/: logger.py
